--- a/sample/SampleOIDCAuth/SampleOIDCAuth.csproj
+++ b/sample/SampleOIDCAuth/SampleOIDCAuth.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp3.0</TargetFramework>
+    <TargetFramework>netcoreapp3.1</TargetFramework>
     <UserSecretsId>aspnet-sample-6C42CEA9-89AE-4008-A8C1-8047FA7DA53C</UserSecretsId>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="3.0.0-preview9.19424.4" />
-    <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.1-dev-00209" />
-    <PackageReference Include="System.Net.Http.WinHttpHandler" Version="4.6.0-preview9.19421.4" />    
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="3.1.9" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
+    <PackageReference Include="System.Net.Http.WinHttpHandler" Version="4.7.2" />    
   </ItemGroup>
 
   <ItemGroup>
