--- a/src/Sejil.Server/Sejil.csproj
+++ b/src/Sejil.Server/Sejil.csproj
@@ -45,9 +45,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Data.Sqlite" Version="3.1.9" />
     <PackageReference Include="Ben.Demystifier" Version="0.1.6" />
-    <PackageReference Include="Serilog" Version="2.10.0" />
+    <PackageReference Include="Serilog.Extensions.Hosting" Version="3.1.0" />
+    <PackageReference Include="Serilog.Settings.Configuration" Version="3.1.0" />
     <PackageReference Include="Serilog.Sinks.PeriodicBatching" Version="2.3.0" />
-    <PackageReference Include="Serilog.Extensions.Logging" Version="3.0.1" />
     <PackageReference Include="Dapper" Version="2.0.35" />
     <PackageReference Include="System.Text.Json" Version="4.7.2" />
   </ItemGroup>
