--- a/src/Sejil.Client/package.json
+++ b/src/Sejil.Client/package.json
@@ -1,31 +1,52 @@
 {
-    "name": "sejil",
-    "version": "1.1.0",
-    "private": true,
-    "dependencies": {
-        "antd": "3.5.4",
-        "mobx": "4.3.0",
-        "mobx-react": "5.1.2",
-        "react": "16.4.0",
-        "react-dom": "16.4.0",
-        "react-scripts-ts": "2.16.0"
-    },
-    "scripts": {
-        "start": "react-app-rewired start --scripts-version react-scripts-ts",
-        "build": "react-app-rewired build --scripts-version react-scripts-ts",
-        "test": "react-app-rewired test --env=jsdom --scripts-version react-scripts-ts"
-    },
-    "devDependencies": {
-        "@types/jest": "22.2.3",
-        "@types/node": "10.1.3",
-        "@types/react": "16.3.14",
-        "@types/react-dom": "16.0.5",
-        "jest-fetch-mock": "1.6.2",
-        "mobx-react-devtools": "5.0.1",
-        "react-app-rewire-less": "2.1.1",
-        "react-app-rewired": "1.5.2",
-        "ts-import-plugin": "1.4.5",
-        "typescript": "2.8.3",
-        "webpack-visualizer-plugin": "0.1.11"
-    }
+  "name": "sejil-ui",
+  "version": "0.1.0",
+  "private": true,
+  "dependencies": {
+    "@testing-library/jest-dom": "^5.11.5",
+    "@testing-library/react": "^11.1.1",
+    "@testing-library/user-event": "^12.2.0",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.6",
+    "@types/react": "^16.9.56",
+    "@types/react-dom": "^16.9.9",
+    "@types/react-transition-group": "^4.4.0",
+    "antd": "^4.8.0",
+    "babel-plugin-import": "^1.13.1",
+    "customize-cra": "^1.0.0",
+    "dayjs": "^1.9.5",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.2",
+    "react": "^17.0.1",
+    "react-app-rewired": "^2.1.6",
+    "react-dom": "^17.0.1",
+    "react-scripts": "4.0.0",
+    "react-transition-group": "^4.4.1",
+    "typescript": "^4.0.5"
+  },
+  "scripts": {
+    "analyze": "source-map-explorer 'build/static/js/*.js'",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
