--- a/sample/.editorconfig
+++ b/sample/.editorconfig
@@ -2,3 +2,5 @@
 
 # IDE1006: Naming Styles
 dotnet_diagnostic.IDE1006.severity = none
+# IDE0161: Naming Styles
+dotnet_diagnostic.IDE0161.severity = none
