--- a/src/Sejil.Server/Directory.Build.props
+++ b/src/Sejil.Server/Directory.Build.props
@@ -4,12 +4,13 @@
     <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>Latest</LangVersion>
+    <!--<Nullable>enable</Nullable>-->
     <OutputType>Library</OutputType>
     <IsPackable>true</IsPackable>
 
-    <AnalysisLevel>latest</AnalysisLevel>
+    <!--<AnalysisLevel>latest</AnalysisLevel>
     <AnalysisMode>AllEnabledByDefault</AnalysisMode>
-    <EnableNETAnalyzers>true</EnableNETAnalyzers>
+    <EnableNETAnalyzers>true</EnableNETAnalyzers>-->
 
     <Summary>A pluggable logs viewer</Summary>
     <Description>Capture, view and filter your ASP.net core log events right from your app</Description>
