--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -4,6 +4,7 @@
     <TargetFrameworks>netcoreapp3.1;net5.0;net6.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>latest</LangVersion>
+    <!-- <Nullable>enable</Nullable> -->
     <IsPackable>false</IsPackable>
   </PropertyGroup>
 
