--- a/test/Sejil.Test/Sejil.Test.csproj
+++ b/test/Sejil.Test/Sejil.Test.csproj
@@ -1,4 +1,8 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="5.0.12" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\..\src\Sejil.Server\Sejil\Sejil.csproj" />
