--- a/src/Sejil.Server/Directory.Build.props
+++ b/src/Sejil.Server/Directory.Build.props
@@ -21,6 +21,7 @@
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
 
     <VersionPrefix>4.0.0</VersionPrefix>
+    <VersionSuffix>beta-01</VersionSuffix>
 
     <PublishRepositoryUrl>true</PublishRepositoryUrl>
     <EmbedUntrackedSources>true</EmbedUntrackedSources>
@@ -34,7 +35,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1" PrivateAssets="All"/>
   </ItemGroup>
 
   <ItemGroup>
